[metadata]
name = watson-graphing
version = 0.0.1
author = Kyle Johnston
author_email = kyle@carabiner.link
description = Create graphs from Watson data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/k4j8/watson-graphing
project_urls =
    Bug Tracker = https://github.com/k4j8/watson-graphing/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    watson-graphing = watson_graphing:main
